kubernetes/base/flasher/api-v2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-v2
  template:
    metadata:
      labels:
        app: api-v2
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - image: api-v2
          name: api-v2
          imagePullPolicy: Always # TODO with tags IfNotPresent
          ports:
            - name: http-api-v2
              containerPort: 8080
